MOSIP-41428 : Merge PMS Services code from develop to release-1.3.x branch (#1321)
* saving the clientNameLangmap while creating and updating of client

Signed-off-by: Mohd Kaif Siddique <mohdkaif.siddique@ad.infosys.com>

* uncommented websubpulisher

Signed-off-by: Mohd Kaif Siddique <mohdkaif.siddique@ad.infosys.com>

* add null pointer check

Signed-off-by: Mohd Kaif Siddique <mohdkaif.siddique@ad.infosys.com>

* MOSIP:32732 - reverted changes. (#673)

Signed-off-by: sudeep <sudeep.j7353@gmail.com>

* DSD-5071 Added Missing db configuration

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* MOSIP-33136

Signed-off-by: Nandhukumar <nandhukumare@gmail.com>

* MOSIP-33173 Updated the POM version and apitest-commons version (#706)

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

* Mosip-32842 Merge java21 code to develop. (#727)

* MOSIP-32363 JAVA 21 upgrade (#655)

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

* MOSIP-32842 Pom changes for java 21 migration

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 Change javax.servelt. to jakarta.servlet.

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 Change javax to jakarta

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 build issue fixed

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 Updated push trigger

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 Updated jacoco version

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 Removed version

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 Changes to build skipping test cases

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-32842 Added correcte package

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* Updated the API commons artifact ID (#661)

* MOSIP-32363 JAVA 21 upgrade

Signed-off-by: Mohanachandran S <mohanachandran.s@techn